--- a/projects/client/src/app/components/form-details/form-details.component.html
+++ b/projects/client/src/app/components/form-details/form-details.component.html
@@ -211,7 +211,7 @@
                   <small>You will be redirected to the selected form after submitting this daily driver form.</small>
                 </div>
                 <div class="form-check mb-2 p-2 border border-light rounded">
-                  <input class="form-check-input" type="radio" name="selected_order_form" id="temp_issue_form" 
+                  <input class="form-check-input" type="radio" name="orders_products_issues_reason" id="temp_issue_form" 
                          value="rejected-order-temp-form" formControlName="orders_products_issues_reason">
                   <label class="form-check-label w-100" for="temp_issue_form">
                     <i class="bi bi-thermometer-half me-2 text-danger"></i>
@@ -220,7 +220,7 @@
                   </label>
                 </div>
                 <div class="form-check p-2 border border-light rounded">
-                  <input class="form-check-input" type="radio" name="selected_order_form" id="damaged_product_form" 
+                  <input class="form-check-input" type="radio" name="orders_products_issues_reason" id="damaged_product_form" 
                          value="rejected-order-form" formControlName="orders_products_issues_reason">
                   <label class="form-check-label w-100" for="damaged_product_form">
                     <i class="bi bi-x-octagon me-2 text-warning"></i>
@@ -229,8 +229,9 @@
                   </label>
                 </div>
               </div>
-              <div *ngIf="driverForm.get('orders_products_issues_reason')?.invalid && driverForm.get('orders_products_issues_reason')?.touched" class="text-danger small mt-1">
-                Please select a form to complete
+              <div *ngIf="driverForm.get('orders_products_issues_reason')?.invalid && (driverForm.get('orders_products_issues_reason')?.touched || showSectionErrors)" class="alert alert-danger py-2 px-3 mt-2">
+                <i class="bi bi-exclamation-triangle me-2"></i>
+                <strong>Please select a form to complete</strong>
               </div>
             </div>
           </div>
